<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_tips"
        android:textColor="@color/color_303235"
        android:textSize="@dimen/sp_20"
        />
    <ImageView
        android:layout_marginTop="@dimen/dp_25"
        android:id="@+id/iv_img"
        android:layout_below="@+id/tv_"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/pic_backups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ImageView>
    <TextView
        android:id="@+id/tv_re"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/iv_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backed_skip_this_step"
        android:textColor="#F2993D"
        android:textSize="@dimen/sp_14"
        />
    <TextView
        android:id="@+id/tv_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_centerVertical="true"
        android:layout_below="@+id/tv_re"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obtaining_the_mnemonic"
        android:textColor="@color/color_303235"
        android:textSize="@dimen/sp_16"
        />
</RelativeLayout>