<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_flight"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_106"
        android:layout_height="@dimen/dp_106"></ImageView>
        <TextView
            android:id="@+id/tv_title"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_below="@+id/iv_flight"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:textColor="#202121"
            android:textSize="@dimen/sp_16"
            android:text="@string/turn_airplane_mode"
            android:layout_height="wrap_content"></TextView>
    <TextView
        android:id="@+id/tv_content"
        android:gravity="left"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/for_your_wallet_security"
        android:textColor="#727272"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="@dimen/sp_14"
        />
    <TextView
        android:layout_marginTop="@dimen/dp_15"
        android:id="@+id/tv_kown"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/cread_wallet_i_know"
        android:text="@string/i_know"
        android:textColor="#FADCAD"
        android:textSize="@dimen/sp_16"
        />
</LinearLayout>