<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activity.wallet.CreateUserActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_284"
            android:background="#242424" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">
            <LinearLayout
                android:id="@+id/iv_finish"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_60"
                android:layout_marginTop="@dimen/dp_35"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:scaleType="centerCrop"
                    android:background="@mipmap/back_white"></ImageView>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:text="@string/create_wallet"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20" />


        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_158"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/dp_133"
            android:src="@mipmap/create_two_bg"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cread_wallet_bg"
            android:layout_marginTop="@dimen/dp_160"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_15"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/wallet_name"
                android:textColor="@color/color_232323"
                android:textSize="@dimen/sp_16" />
            <!-- android:background="@drawable/cread_wallet_bg"-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_56"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_45">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/please_enter_the_wallet_name"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textColor="@color/color_303235"
                    android:textColorHint="@color/color_D7D7D7"></EditText>

                <ImageView

                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icon_b_name"
                    android:visibility="gone"></ImageView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="#ff8e8892"
                    android:visibility="gone"></View>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="15dp"
                android:background="#EDEDED" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/security_code"
                android:textColor="@color/color_232323"
                android:textSize="@dimen/sp_16" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_56"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/please_enter_secure_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/color_303235"
                    android:textColorHint="@color/color_D7D7D7"></EditText>

                <LinearLayout
                    android:id="@+id/cre_lin_xianshi_yincang"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_56"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="bottom|center_horizontal"
                    >
                    <ImageView
                        android:id="@+id/img_xianshi_yincang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/yincang_new"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:visibility="gone"></ImageView>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="#ff8e8892"
                    android:visibility="gone"></View>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="15dp"
                android:background="#EDEDED" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/the_password_combination"
                android:textColor="@color/color_A9AAAB"
                android:textSize="@dimen/sp_12" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/determine_secure_password"
                android:textColor="@color/color_232323"
                android:textSize="@dimen/sp_16" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_56"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/et_passwordc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/please_enter_security_password_again"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/color_303235"
                    android:textColorHint="@color/color_D7D7D7"></EditText>
                <LinearLayout
                    android:id="@+id/cre_lin_xianshi_yincang_two"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_56"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="bottom|center_horizontal"
                    >
                <ImageView
                    android:id="@+id/img_xianshi_yincang_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/yincang_new"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:visibility="gone"></ImageView>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="#ff8e8892"
                    android:visibility="gone"></View>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="15dp"
                android:background="#EDEDED" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/invitation_code"
                android:textColor="@color/color_646566"
                android:textSize="@dimen/sp_14"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_56"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_45"
                android:visibility="gone">

                <EditText
                    android:id="@+id/ed_invtation_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/please_enter_invitation_code"
                    android:inputType="text"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textColor="@color/color_303235"
                    android:textColorHint="@color/color_A9AAAB"></EditText>

                <ImageView
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icon_b_password"
                    android:visibility="gone"></ImageView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="#ff8e8892"
                    android:visibility="gone"></View>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="15dp"
                android:background="#EDEDED" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_select"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_16"
                    android:background="@drawable/user_selector"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="@string/agree_and_read"
                    android:textColor="#86828F"
                    android:textSize="@dimen/sp_11" />

                <TextView
                    android:id="@+id/tv_intent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="《unique服务协议》"
                    android:textColor="#5678E5"
                    android:textSize="@dimen/sp_11" />

                <TextView
                    android:id="@+id/tv_intent_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="隐私政策》"
                    android:visibility="gone"
                    android:textColor="#5678E5"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_create_wallet"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_43"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_60"
                android:layout_marginRight="@dimen/dp_30"
                android:background="@drawable/cread_shape"
                android:gravity="center"
                android:text="@string/create_wallet"
                android:layout_marginBottom="@dimen/dp_150"
                android:textColor="#B5A081"
                android:textSize="@dimen/sp_18"></TextView>
        </LinearLayout>
    </FrameLayout>
</ScrollView>