<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.activity.wallet.LoadWalletActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_284"
                android:background="#242424" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30">

                <ImageView
                    android:id="@+id/iv_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_35"
                    android:background="@mipmap/back_white"
                    android:scaleType="centerCrop"></ImageView>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_30"
                    android:text="导入助记词"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_20" />


            </RelativeLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_158"
                android:scaleType="fitCenter"
                android:layout_marginTop="@dimen/dp_133"
                android:src="@mipmap/create_two_bg"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_160"
                android:layout_marginRight="@dimen/dp_5"
                android:background="@drawable/cread_wallet_bg"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="导入助记词"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginTop="@dimen/dp_30"
                    android:gravity="center"
                    android:textColor="@color/color_232323"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="请按顺序输入助记词,以确认您正确备份"
                    android:gravity="center"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColor="@color/color_232323"/>


                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_200"
                    android:background="#F2F2F2"
                    android:gravity="top"
                    android:layout_margin="@dimen/dp_4"
                    android:hint="@string/please_enter_the_mnemonic_words"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_15"
                    android:textColor="#303235"
                    android:textColorHint="#CED0D2"
                    android:textSize="@dimen/sp_14">

                </EditText>

                <TextView
                    android:id="@+id/tv_isok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/the_mnemonic_phrase_wrong"
                    android:textColor="#fff8ac18"
                    android:textSize="@dimen/sp_12"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_nest"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_43"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_130"
                    android:background="@drawable/cread_shape"
                    android:gravity="center"
                    android:text="@string/next_step"
                    android:textColor="#B5A081"
                    android:textSize="@dimen/sp_16"></TextView>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>